--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <section id="about">
     <h2>個人簡介</h2>
     <p>歡迎來到我的個人網站，我目前就讀於台灣科技大學企管系，在獲得許多書卷獎的同時也參與活動的籌備以及參加競賽活動</p>
-    <img src="20231010_170403_1744685853263.jpg" alt="我的相片" style="width:50%;">
+    <img src="attached_assets/20231010_170403_1744685853263.jpg" alt="我的相片" style="width:50%;">
   </section>
 
   <section id="experience">
@@ -82,7 +82,7 @@
     <div class="portfolio-item">
       <h3>1、交通事故排除時間預測分析與應用</h3>
       <p>隊伍名稱為 轟隆隆 隆隆隆隆 衝衝衝衝 拉風。高速公路上每天都有多起交通意外，這些意外不僅影響車輛的正常行駛，還可能造成壅塞。若能預先估算事故排除時間，則有助於縮短行車時間，並避免出現壅塞路段。希望透過本研究的分析及策略能減少受事故影響的行車時間，降低用路人的時間成本。</p>
-      <img src="148092.jpg" alt="交通事故排除時間預測分析與應用" style="width:50%;">
+      <img src="attached_assets/148092.jpg" alt="交通事故排除時間預測分析與應用" style="width:50%;">
     </div>
     <div class="portfolio-item">
       <h3>2、我自己訓練的模型</h3>
