--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
+      <div class="container-fluid">       
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -51,7 +51,13 @@
   <section id="about">
     <h2>個人簡介</h2>
     <p>歡迎來到我的個人網站，我目前就讀於台灣科技大學企管系，在獲得許多書卷獎的同時也參與活動的籌備以及參加競賽活動</p>
-    <img src="attached_assets/20231010_170403_1744685853263.jpg" alt="我的相片" style="width:50%;">
+    <div style="text-align: center;">
+      <img src="attached_assets/20231010_170403.jpg"
+           alt="Personal Photo"
+           class="img-fluid rounded-circle"
+           style="width: 200px; height: 200px; object-fit: cover; border-radius: 50%;">
+    </div>
+
   </section>
 
   <section id="experience">
@@ -89,10 +95,7 @@
       <p>利用Google的teachable machine來訓練一個我自己的模型</p>
       <a href="https://teachablemachine.withgoogle.com/models/dVT-wr8bi/" target="_blank">前往網站</a>
 
-    </div>
-  </section>
 
-  <script src="script.js"></script>
-</body>
+      
+<html>
 
-</html>
