--- a/index.html
+++ b/index.html
@@ -2,95 +2,98 @@
 <html lang="zh-TW">
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>個人作品集</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
   <header class="bg-dark text-white text-center py-5">
     <div class="container">
-      <h1>歡迎來到我的個人網站</h1>
-      <p>探索我的故事、作品與聯絡方式</p>
-      <a href="#about" class="btn btn-primary mt-3">了解更多</a>
+      <h1>我的作品集</h1>
+      <p>探索我的作品，點擊了解詳情。</p>
     </div>
   </header>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow">
-    <div class="container">
-      <a class="navbar-brand" href="#">作品集</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="#about">關於我</a></li>
-          <li class="nav-item"><a class="nav-link" href="#portfolio">作品集</a></li>
-          <li class="nav-item"><a class="nav-link" href="#experience">經歷</a></li>
-          <li class="nav-item"><a class="nav-link" href="#contact">聯絡我</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-  <section id="about" class="py-5 bg-light">
-    <div class="container text-center">
-      <h2>關於我</h2>
-      <p>我目前就讀於台灣科技大學企管系，參與多項活動並贏得競賽獎項。</p>
-      <img src="attached_assets/20231010_170403.jpg" alt="我的照片" class="img-fluid rounded-circle shadow" style="width:150px; height:150px;">
-    </div>
-  </section>
-
   <section id="portfolio" class="py-5">
     <div class="container">
-      <h2 class="text-center">作品集</h2>
+      <h2 class="text-center mb-4">作品集</h2>
       <div class="row">
-        <div class="col-md-6">
-          <div class="card shadow mb-4">
-            <img src="attached_assets/148092.jpg" class="card-img-top" alt="交通事故分析">
+        <!-- 作品 1 -->
+        <div class="col-md-4 mb-4">
+          <div class="card">
+            <img src="attached_assets/148092.jpg" class="card-img-top" alt="作品1圖片">
             <div class="card-body">
-              <h5 class="card-title">交通事故排除時間預測</h5>
-              <p class="card-text">通過數據分析減少行車時間，降低用路人的時間成本。</p>
+              <h5 class="card-title">交通事故分析</h5>
+              <p class="card-text">預測事故排除時間以縮短交通堵塞。</p>
+              <a href="project1.html" class="btn btn-primary" target="_blank">查看更多</a>
             </div>
           </div>
         </div>
-        <div class="col-md-6">
-          <div class="card shadow mb-4">
+        <!-- 作品 2 -->
+        <div class="col-md-4 mb-4">
+          <div class="card">
+            <img src="attached_assets/teachable_machine.jpg" class="card-img-top" alt="作品2圖片">
             <div class="card-body">
-              <h5 class="card-title">模型訓練作品</h5>
-              <p class="card-text">利用Google Teachable Machine訓練專屬模型。</p>
-              <a href="https://teachablemachine.withgoogle.com/models/dVT-wr8bi/" class="btn btn-primary" target="_blank">查看詳情</a>
+              <h5 class="card-title">模型訓練</h5>
+              <p class="card-text">基於Google Teachable Machine的訓練模型。</p>
+              <a href="project2.html" class="btn btn-primary" target="_blank">查看更多</a>
+            </div>
+          </div>
+        </div>
+        <!-- 作品 3 -->
+        <div class="col-md-4 mb-4">
+          <div class="card">
+            <img src="attached_assets/project3.jpg" class="card-img-top" alt="作品3圖片">
+            <div class="card-body">
+              <h5 class="card-title">智慧家庭控制</h5>
+              <p class="card-text">設計一個以AI為核心的智慧家庭系統。</p>
+              <a href="project3.html" class="btn btn-primary" target="_blank">查看更多</a>
+            </div>
+          </div>
+        </div>
+        <!-- 作品 4 -->
+        <div class="col-md-4 mb-4">
+          <div class="card">
+            <img src="attached_assets/project4.jpg" class="card-img-top" alt="作品4圖片">
+            <div class="card-body">
+              <h5 class="card-title">姿勢檢測模型</h5>
+              <p class="card-text">利用Mediapipe進行姿勢檢測與應用。</p>
+              <a href="project4.html" class="btn btn-primary" target="_blank">查看更多</a>
+            </div>
+          </div>
+        </div>
+        <!-- 作品 5 -->
+        <div class="col-md-4 mb-4">
+          <div class="card">
+            <img src="attached_assets/project5.jpg" class="card-img-top" alt="作品5圖片">
+            <div class="card-body">
+              <h5 class="card-title">語音辨識助手</h5>
+              <p class="card-text">設計一個語音命令驅動的助手。</p>
+              <a href="project5.html" class="btn btn-primary" target="_blank">查看更多</a>
+            </div>
+          </div>
+        </div>
+        <!-- 作品 6 -->
+        <div class="col-md-4 mb-4">
+          <div class="card">
+            <img src="attached_assets/project6.jpg" class="card-img-top" alt="作品6圖片">
+            <div class="card-body">
+              <h5 class="card-title">電商推薦系統</h5>
+              <p class="card-text">基於AI的商品推薦解決方案。</p>
+              <a href="project6.html" class="btn btn-primary" target="_blank">查看更多</a>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
-
-  <section id="experience" class="py-5 bg-light">
-    <div class="container text-center">
-      <h2>經歷</h2>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">第三屆永豐金控校園商業競賽</li>
-        <li class="list-group-item">2024國道智慧交通創意競賽優等</li>
-        <li class="list-group-item">高中小論文競賽特優</li>
-      </ul>
-    </div>
-  </section>
-
-  <section id="contact" class="py-5 text-center">
-    <div class="container">
-      <h2>聯絡我</h2>
-      <p>電子郵件：<a href="mailto:B11108037@gapps.ntust.edu.tw">B11108037@gapps.ntust.edu.tw</a></p>
     </div>
   </section>
 
   <footer class="bg-dark text-white text-center py-3">
-    <p>&copy; 2025 我的個人網站</p>
+    <p>&copy; 2025 我的作品集</p>
   </footer>
 </body>
 
