--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>個人作品集</title>
+  <title>個人網站</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -13,16 +13,58 @@
 <body>
   <header class="bg-dark text-white text-center py-5">
     <div class="container">
-      <h1>我的作品集</h1>
-      <p>探索我的作品，點擊了解詳情。</p>
+      <h1>歡迎來到我的個人網站</h1>
+      <p>探索我的作品、自我介紹與經歷。</p>
     </div>
   </header>
 
-  <section id="portfolio" class="py-5">
+  <!-- 自我介紹區 -->
+  <section id="about" class="py-5 bg-light">
+    <div class="container">
+      <h2 class="text-center mb-4">關於我</h2>
+      <div class="row">
+        <div class="col-md-4 text-center">
+          <img src="attached_assets/20231010_170403.jpg" alt="個人照片" class="img-fluid rounded-circle" style="width: 200px; height: 200px;">
+        </div>
+        <div class="col-md-8">
+          <p>您好，我是台灣科技大學企管系的學生。我不僅熱衷於學術研究並多次獲得書卷獎，也積極參與活動籌備與競賽活動。</p>
+          <p>我喜歡探索人工智慧的應用，並希望能結合這些技術帶來更多的可能性。</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- 經歷區 -->
+  <section id="experience" class="py-5">
+    <div class="container">
+      <h2 class="text-center mb-4">競賽與活動經歷</h2>
+      <div class="row">
+        <div class="col-md-6">
+          <h3>競賽經歷</h3>
+          <ul>
+            <li>第三屆永豐金控校園商業競賽</li>
+            <li>2024 國道智慧交通管理創意競賽優等</li>
+            <li>高中小論文競賽特優 - 振興券影響與滿意度調查</li>
+            <li>商管群中心商概優勝獎</li>
+          </ul>
+        </div>
+        <div class="col-md-6">
+          <h3>活動經歷</h3>
+          <ul>
+            <li>籌備112四系聯合宿營</li>
+            <li>籌備113寒假點心營</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- 作品集區 -->
+  <section id="portfolio" class="py-5 bg-light">
     <div class="container">
       <h2 class="text-center mb-4">作品集</h2>
       <div class="row">
-        <!-- 作品 1 -->
+        <!-- 作品1 -->
         <div class="col-md-4 mb-4">
           <div class="card">
             <img src="attached_assets/148092.jpg" class="card-img-top" alt="作品1圖片">
@@ -33,7 +75,7 @@
             </div>
           </div>
         </div>
-        <!-- 作品 2 -->
+        <!-- 作品2 -->
         <div class="col-md-4 mb-4">
           <div class="card">
             <img src="attached_assets/teachable_machine.jpg" class="card-img-top" alt="作品2圖片">
@@ -41,6 +83,17 @@
               <h5 class="card-title">模型訓練</h5>
               <p class="card-text">基於Google Teachable Machine的訓練模型。</p>
               <a href="project2.html" class="btn btn-primary" target="_blank">查看更多</a>
+            </div>
+          </div>
+        </div>
+        <!-- 作品3 -->
+        <div class="col-md-4 mb-4">
+          <div class="card">
+            <img src="attached_assets/project3.jpg" class="card-img-top" alt="作品3圖片">
+            <div class="card-body">
+              <h5 class="card-title">智慧家庭控制</h5>
+              <p class="card-text">設計一個以AI為核心的智慧家庭系統。</p>
+              <a href="project3.html" class="btn btn-primary" target="_blank">查看更多</a>
             </div>
           </div>
         </div>
