--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h2 class="text-center mb-4">關於我</h2>
       <div class="row">
         <div class="col-md-4 text-center">
-          <img src="attached_assets/20231010_170403.jpg" alt="個人照片" class="img-fluid rounded-circle" style="width: 200px; height: 200px;">
+          <img src="attached_assets/20231010_170403.jpg" alt="個人照片" class="img-fluid rounded-circle" style="width: 150px; height: 150px;">
         </div>
         <div class="col-md-8">
           <p>您好，我是台灣科技大學企管系的學生。我不僅熱衷於學術研究並多次獲得書卷獎，也積極參與活動籌備與競賽活動。</p>
@@ -63,48 +63,48 @@
   <section id="portfolio" class="py-5 bg-light">
     <div class="container">
       <h2 class="text-center mb-4">作品集</h2>
-      <div class="row">
+      <div class="row row-cols-1 row-cols-md-3 g-4">
         <!-- 作品1 -->
-        <div class="col-md-4 mb-4">
-          <div class="card">
-            <img src="attached_assets/148092.jpg" class="card-img-top" alt="作品1圖片">
+        <div class="col">
+          <div class="card h-100">
+            <img src="attached_assets/148092.jpg" class="card-img-top" alt="作品1圖片" style="height: 150px; object-fit: cover;">
             <div class="card-body">
               <h5 class="card-title">交通事故分析</h5>
               <p class="card-text">預測事故排除時間以縮短交通堵塞。</p>
-              <a href="project1.html" class="btn btn-primary" target="_blank">查看更多</a>
+              <a href="project1.html" class="btn btn-primary btn-sm" target="_blank">查看更多</a>
             </div>
           </div>
         </div>
         <!-- 作品2 -->
-        <div class="col-md-4 mb-4">
-          <div class="card">
-            <img src="attached_assets/teachable_machine.jpg" class="card-img-top" alt="作品2圖片">
+        <div class="col">
+          <div class="card h-100">
+            <img src="attached_assets/teachable_machine.jpg" class="card-img-top" alt="作品2圖片" style="height: 150px; object-fit: cover;">
             <div class="card-body">
               <h5 class="card-title">模型訓練</h5>
               <p class="card-text">基於Google Teachable Machine的訓練模型。</p>
-              <a href="project2.html" class="btn btn-primary" target="_blank">查看更多</a>
+              <a href="project2.html" class="btn btn-primary btn-sm" target="_blank">查看更多</a>
             </div>
           </div>
         </div>
         <!-- 作品3 -->
-        <div class="col-md-4 mb-4">
-          <div class="card">
-            <img src="attached_assets/project3.jpg" class="card-img-top" alt="作品3圖片">
+        <div class="col">
+          <div class="card h-100">
+            <img src="attached_assets/project3.jpg" class="card-img-top" alt="作品3圖片" style="height: 150px; object-fit: cover;">
             <div class="card-body">
               <h5 class="card-title">智慧家庭控制</h5>
               <p class="card-text">設計一個以AI為核心的智慧家庭系統。</p>
-              <a href="project3.html" class="btn btn-primary" target="_blank">查看更多</a>
+              <a href="project3.html" class="btn btn-primary btn-sm" target="_blank">查看更多</a>
             </div>
           </div>
         </div>
-        <!-- 作品 3 -->
-        <div class="col-md-4 mb-4">
-          <div class="card">
-            <img src="attached_assets/project3.jpg" class="card-img-top" alt="作品3圖片">
+        <!-- 作品4 -->
+        <div class="col">
+          <div class="card h-100">
+            <img src="attached_assets/project4.jpg" class="card-img-top" alt="作品4圖片" style="height: 150px; object-fit: cover;">
             <div class="card-body">
-              <h5 class="card-title">智慧家庭控制</h5>
-              <p class="card-text">設計一個以AI為核心的智慧家庭系統。</p>
-              <a href="project3.html" class="btn btn-primary" target="_blank">查看更多</a>
+              <h5 class="card-title">AI健康監控</h5>
+              <p class="card-text">基於AI的健康監控設備開發。</p>
+              <a href="project4.html" class="btn btn-primary btn-sm" target="_blank">查看更多</a>
             </div>
           </div>
         </div>
