--- a/index.html
+++ b/index.html
@@ -8,11 +8,71 @@
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <style>
+    body {
+      background-color: #f8f9fa;
+    }
+
+    header,
+    footer {
+      background-color: #343a40;
+      color: white;
+    }
+
+    .content {
+      margin: 0 auto;
+      max-width: 1200px;
+    }
+
+    .navbar {
+      margin-bottom: 20px;
+    }
+
+    .card img {
+      display: block;
+      margin: 0 auto;
+    }
+
+    .card-body {
+      text-align: center;
+    }
+
+    .portfolio-section {
+      padding: 50px 0;
+    }
+  </style>
 </head>
 
 <body>
-  <header class="bg-dark text-white text-center py-5">
+  <!-- 導覽列 -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
+      <a class="navbar-brand" href="#">我的網站</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="切換導航">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#about">關於我</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#experience">經歷</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#portfolio">作品集</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">聯絡我</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- 首頁區 -->
+  <header class="py-5 text-center">
+    <div class="content">
       <h1>歡迎來到我的個人網站</h1>
       <p>探索我的作品、自我介紹與經歷。</p>
     </div>
@@ -20,15 +80,14 @@
 
   <!-- 自我介紹區 -->
   <section id="about" class="py-5 bg-light">
-    <div class="container">
+    <div class="content">
       <h2 class="text-center mb-4">關於我</h2>
-      <div class="row">
+      <div class="row align-items-center">
         <div class="col-md-4 text-center">
           <img src="attached_assets/20231010_170403.jpg" alt="個人照片" class="img-fluid rounded-circle" style="width: 150px; height: 150px;">
         </div>
         <div class="col-md-8">
           <p>您好，我是台灣科技大學企管系的學生。我不僅熱衷於學術研究並多次獲得書卷獎，也積極參與活動籌備與競賽活動。</p>
-          <p>我喜歡探索人工智慧的應用，並希望能結合這些技術帶來更多的可能性。</p>
         </div>
       </div>
     </div>
@@ -36,8 +95,8 @@
 
   <!-- 經歷區 -->
   <section id="experience" class="py-5">
-    <div class="container">
-      <h2 class="text-center mb-4">競賽與活動經歷</h2>
+    <div class="content">
+      <h2 class="text-center mb-4">經歷</h2>
       <div class="row">
         <div class="col-md-6">
           <h3>競賽經歷</h3>
@@ -60,18 +119,18 @@
   </section>
 
   <!-- 作品集區 -->
-  <section id="portfolio" class="py-5 bg-light">
-    <div class="container">
+  <section id="portfolio" class="portfolio-section bg-light">
+    <div class="content">
       <h2 class="text-center mb-4">作品集</h2>
       <div class="row row-cols-1 row-cols-md-3 g-4">
-        <!-- 作品1 -->
+        <!-- 重複此結構增加更多作品 -->
         <div class="col">
           <div class="card h-100">
-            <img src="attached_assets/148092.jpg" class="card-img-top" alt="作品1圖片" style="height: 150px; object-fit: cover;">
+            <img src="attached_assets/148092.jpg" class="card-img-top" alt="作品圖片" style="height: 120px; object-fit: cover;">
             <div class="card-body">
               <h5 class="card-title">交通事故分析</h5>
               <p class="card-text">預測事故排除時間以縮短交通堵塞。</p>
-              <a href="project1.html" class="btn btn-primary btn-sm" target="_blank">查看更多</a>
+              <a href="project1.html" class="btn btn-primary btn-sm">查看更多</a>
             </div>
           </div>
         </div>
