--- a/index.html
+++ b/index.html
@@ -203,9 +203,20 @@
       </div>
     </div>
   </section>
+<!-- 聯繫區 -->
+  <section id="contact" class="py-5">
+    <div class="content">
+      <h2 class="text-center mb-4">聯絡我</h2>
+      <p class="text-center">您可以通過以下方式聯繫我：</p>
+      <div class="text-center">
+        <p>Email: B11108037@gapps.ntust.edu.tw</p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile">我的 LinkedIn</a></p>
+      </div>
+    </div>
+  </section>
 
-  <footer class="bg-dark text-white text-center py-3">
-    <p>&copy; 2025 我的作品集</p>
+  <footer class="py-3 bg-dark text-white text-center">
+    <p>&copy; 2025 我的個人網站</p>
   </footer>
 </body>
 
