--- a/index.html
+++ b/index.html
@@ -1,47 +1,47 @@
 <!DOCTYPE html>
-<html lang="zh-TW">
+<html>
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>個人網站</title>
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
-  <link href="style.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <style>
-    body {
-      background-color: #f8f9fa;
-    }
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>個人作品集</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-o+RDsa0ILDo3e4eQZXI0yLyG4As3Al6yGyV0+y2Q0ZD61+HrLkFgG5urBLgHaobD" crossorigin="anonymous">
 
-    header,
-    footer {
-      background-color: #343a40;
-      color: white;
-    }
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJaaQ6Am1u1gI1kMdflsY54z3oDQ4T4h/6/jQ=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-v9fqa2xztovIHbgZWlwu5/3+iK7FFy1+4xU1aBki2gyYyaNxFjAPOe7xN6Ex6cXf" crossorigin="anonymous"></script>
 
-    .content {
-      margin: 0 auto;
-      max-width: 1200px;
-    }
-
-    .navbar {
-      margin-bottom: 20px;
-    }
-
-    .card img {
-      display: block;
-      margin: 0 auto;
-    }
-
-    .card-body {
-      text-align: center;
-    }
-
-    .portfolio-section {
-      padding: 50px 0;
-    }
-  </style>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.min.js" integrity="sha384-g5Soe52kkzBLKKzF6+WLZIgRTI1PWz3zoDUZ7e99ZakRRS0FsJVfz9zuWSr2nw" crossorigin="anonymous"></script>
 </head>
+
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#about">關於我</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#portfolio">作品集</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#experience">經歷</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#activities">活動經歷</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">聯絡我</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
 
 <body>
   <!-- 導覽列 -->
