--- a/index.html
+++ b/index.html
@@ -98,17 +98,28 @@
     <div class="content">
       <h2 class="text-center mb-4">作品集</h2>
       <div class="row row-cols-1 row-cols-md-3 g-4">
-        <!-- 作品1 -->
-        <div class="col">
-          <div class="card h-100">
-            <img src="attached_assets/148092.jpg" class="card-img-top" alt="作品圖片" style="height: 120px; object-fit: cover;">
-            <div class="card-body">
-              <h5 class="card-title">交通事故分析</h5>
-              <p class="card-text">預測事故排除時間以縮短交通堵塞。</p>
-              <a href="project1.html" class="btn btn-primary btn-sm">查看更多</a>
+                  <!-- 作品1 -->
+          <div class="col-md-6 col-lg-4 mb-4 project-item" data-category="web">
+            <div class="card h-100 shadow-sm">
+              <div class="project-img-container">
+                <img src="https://images.unsplash.com/photo-1547658719-da2b51169166?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1064&q=80" 
+                    class="card-img-top" alt="E-commerce Dashboard">
+                <div class="project-overlay">
+                  <h4 class="text-white">交通事故分析</h4>
+                  <p class="text-white">預測事故排除時間以縮短交通堵塞。</p>
+                  <a href="project-details.html?id=1" class="btn btn-primary mt-3">查看項目</a>
+                </div>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">交通事故分析</h5>
+                <p class="card-text text-muted">React, Node.js, MongoDB</p>
+                <div class="d-flex gap-2 mt-2">
+                  <span class="badge bg-primary">時間預測</span>
+                  <span class="badge bg-success">競賽</span>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
         <!-- 作品2 -->
         <div class="col">
           <div class="card h-100">
