--- a/index.html
+++ b/index.html
@@ -1,49 +1,74 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-TW">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>個人作品集</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-o+RDsa0ILDo3e4eQZXI0yLyG4As3Al6yGyV0+y2Q0ZD61+HrLkFgG5urBLgHaobD" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>個人網站</title>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <style>
+    body {
+      background-color: #f8f9fa;
+    }
 
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJaaQ6Am1u1gI1kMdflsY54z3oDQ4T4h/6/jQ=" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-v9fqa2xztovIHbgZWlwu5/3+iK7FFy1+4xU1aBki2gyYyaNxFjAPOe7xN6Ex6cXf" crossorigin="anonymous"></script>
+    header,
+    footer {
+      background-color: #343a40;
+      color: white;
+    }
 
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.min.js" integrity="sha384-g5Soe52kkzBLKKzF6+WLZIgRTI1PWz3zoDUZ7e99ZakRRS0FsJVfz9zuWSr2nw" crossorigin="anonymous"></script>
+    .content {
+      margin: 0 auto;
+      max-width: 1200px;
+    }
+
+    .navbar {
+      margin-bottom: 20px;
+    }
+
+    .card img {
+      display: block;
+      margin: 0 auto;
+    }
+
+    .card-body {
+      text-align: center;
+    }
+
+    .portfolio-section {
+      padding: 50px 0;
+    }
+  </style>
 </head>
 
 <body>
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#about">關於我</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#portfolio">作品集</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#experience">經歷</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#activities">活動經歷</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contact">聯絡我</a>
-            </li>
-          </ul>
-        </div>
+  <!-- 導覽列 -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">我的網站</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="切換導航">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#about">關於我</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#experience">經歷</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#portfolio">作品集</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">聯絡我</a>
+          </li>
+        </ul>
       </div>
-    </nav>
-  </header>
-
-<body>
+    </div>
+  </nav>
 
   <!-- 首頁區 -->
   <header class="py-5 text-center">
@@ -98,116 +123,44 @@
     <div class="content">
       <h2 class="text-center mb-4">作品集</h2>
       <div class="row row-cols-1 row-cols-md-3 g-4">
-<!-- 作品1 -->
-<div class="col-md-4 col-lg-3 mb-4 project-item" data-category="web">
-  <div class="card h-100 shadow-sm">
-    <div class="project-img-container">
-      <img src="https://images.unsplash.com/photo-1547658719-da2b51169166?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1064&q=80" 
-           class="card-img-top" alt="E-commerce Dashboard">
-      <div class="project-overlay">
-        <h4 class="text-white">交通事故分析</h4>
-        <p class="text-white">預測事故排除時間以縮短交通堵塞。</p>
-        <a href="project-details.html?id=1" class="btn btn-primary mt-3">查看項目</a>
-      </div>
-    </div>
-    <div class="card-body">
-      <h5 class="card-title">交通事故分析</h5>
-      <p class="card-text text-muted">React, Node.js, MongoDB</p>
-      <div class="d-flex gap-2 mt-2">
-        <span class="badge bg-primary">時間預測</span>
-        <span class="badge bg-success">競賽</span>
-      </div>
-    </div>
-  </div>
-</div>
-
-        <!-- 作品2 -->
-          <!-- 作品集區 -->
-  <section id="portfolio" class="portfolio-section bg-light">
-    <div class="content">
-      <h2 class="text-center mb-4">作品集</h2>
-      <div class="row row-cols-1 row-cols-md-3 g-4">
-                  <!-- 作品1 -->
-          <div class="col-md-6 col-lg-4 mb-4 project-item" data-category="web">
-            <div class="card h-100 shadow-sm">
-              <div class="project-img-container">
-                <img src="https://images.unsplash.com/photo-1547658719-da2b51169166?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1064&q=80" 
-                    class="card-img-top" alt="E-commerce Dashboard">
-                <div class="project-overlay">
-                  <h4 class="text-white">模型訓練</h4>
-                  <p class="text-white">基於Google Teachable Machine的訓練模型。</p>
-                  <a href="project-details.html?id=1" class="btn btn-primary mt-3">查看項目</a>
-                </div>
-              </div>
-              <div class="card-body">
-                <h5 class="card-title">模型訓練</h5>
-                <p class="card-text text-muted">React, Node.js, MongoDB</p>
-                <div class="d-flex gap-2 mt-2">
-                  <span class="badge bg-primary">Teachable Machine</span>
-                  <span class="badge bg-success">影像識別</span>
-                </div>
-              </div>
+        <!-- 作品1 -->
+        <div class="col">
+          <div class="card h-100">
+            <img src="attached_assets/148092.jpg" class="card-img-top" alt="作品圖片" style="height: 120px; object-fit: cover;">
+            <div class="card-body">
+              <h5 class="card-title">交通事故分析</h5>
+              <p class="card-text">預測事故排除時間以縮短交通堵塞。</p>
+              <a href="project1.html" class="btn btn-primary btn-sm">查看更多</a>
             </div>
           </div>
+        </div>
+        <!-- 作品2 -->
+        <div class="col">
+          <div class="card h-100">
+            <img src="attached_assets/project2.jpg" class="card-img-top" alt="作品圖片" style="height: 120px; object-fit: cover;">
+            <div class="card-body">
+              <h5 class="card-title">AI 模型訓練</h5>
+              <p class="card-text">利用 Teachable Machine 訓練自我模型。</p>
+              <a href="https://teachablemachine.withgoogle.com/models/dVT-wr8bi/" target="_blank" class="btn btn-primary btn-sm">查看模型</a>
+            </div>
+          </div>
+        </div>
         <!-- 作品3 -->
         <div class="col">
           <div class="card h-100">
-            <img src="attached_assets/project3.jpg" class="card-img-top" alt="作品3圖片" style="height: 150px; object-fit: cover;">
+            <img src="attached_assets/project3.jpg" class="card-img-top" alt="作品圖片" style="height: 120px; object-fit: cover;">
             <div class="card-body">
-              <h5 class="card-title">智慧家庭控制</h5>
-              <p class="card-text">設計一個以AI為核心的智慧家庭系統。</p>
-              <a href="project3.html" class="btn btn-primary btn-sm" target="_blank">查看更多</a>
-            </div>
-          </div>
-        </div>
-        <!-- 作品4 -->
-        <div class="col">
-          <div class="card h-100">
-            <img src="attached_assets/project4.jpg" class="card-img-top" alt="作品4圖片" style="height: 150px; object-fit: cover;">
-            <div class="card-body">
-              <h5 class="card-title">AI健康監控</h5>
-              <p class="card-text">基於AI的健康監控設備開發。</p>
-              <a href="project4.html" class="btn btn-primary btn-sm" target="_blank">查看更多</a>
-            </div>
-          </div>
-        </div>
-        <!-- 作品 4 -->
-        <div class="col-md-4 mb-4">
-          <div class="card">
-            <img src="attached_assets/project4.jpg" class="card-img-top" alt="作品4圖片">
-            <div class="card-body">
-              <h5 class="card-title">姿勢檢測模型</h5>
-              <p class="card-text">利用Mediapipe進行姿勢檢測與應用。</p>
-              <a href="project4.html" class="btn btn-primary" target="_blank">查看更多</a>
-            </div>
-          </div>
-        </div>
-        <!-- 作品 5 -->
-        <div class="col-md-4 mb-4">
-          <div class="card">
-            <img src="attached_assets/project5.jpg" class="card-img-top" alt="作品5圖片">
-            <div class="card-body">
-              <h5 class="card-title">語音辨識助手</h5>
-              <p class="card-text">設計一個語音命令驅動的助手。</p>
-              <a href="project5.html" class="btn btn-primary" target="_blank">查看更多</a>
-            </div>
-          </div>
-        </div>
-        <!-- 作品 6 -->
-        <div class="col-md-4 mb-4">
-          <div class="card">
-            <img src="attached_assets/project6.jpg" class="card-img-top" alt="作品6圖片">
-            <div class="card-body">
-              <h5 class="card-title">電商推薦系統</h5>
-              <p class="card-text">基於AI的商品推薦解決方案。</p>
-              <a href="project6.html" class="btn btn-primary" target="_blank">查看更多</a>
+              <h5 class="card-title">智慧交通系統</h5>
+              <p class="card-text">開發的智慧交通管理系統。</p>
+              <a href="project3.html" class="btn btn-primary btn-sm">查看更多</a>
             </div>
           </div>
         </div>
       </div>
     </div>
   </section>
-<!-- 聯繫區 -->
+
+  <!-- 聯繫區 -->
   <section id="contact" class="py-5">
     <div class="content">
       <h2 class="text-center mb-4">聯絡我</h2>
