--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg">
+<nav class="navbar navbar-expand-lg sticky-top">
     <div class="container-fluid justify-content-end">
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link" href="#about">關於我</a></li>
