--- a/index.html
+++ b/index.html
@@ -1,3 +1,62 @@
+<!DOCTYPE html>
+<html lang="zh-Hant">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>個人作品集</title>
+
+  <!-- 外部樣式 -->
+  <link href="style.css" rel="stylesheet">
+
+  <!-- Bootstrap 4.3 CSS -->
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+
+  <!-- 導覽列 -->
+  <nav class="navbar navbar-expand-md navbar-light bg-pink sticky-top">
+    <a class="navbar-brand" href="#">個人網站</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarPink" aria-controls="navbarPink" aria-expanded="false" aria-label="切換導航">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarPink">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item"><a class="nav-link" href="#about">關於我</a></li>
+        <li class="nav-item"><a class="nav-link" href="#experience">經歷</a></li>
+        <li class="nav-item"><a class="nav-link" href="#activities">活動經歷</a></li>
+        <li class="nav-item"><a class="nav-link" href="#portfolio">作品集</a></li>
+        <li class="nav-item"><a class="nav-link" href="#contact">聯絡我</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <section id="about">
+    <h2>個人簡介</h2>
+    <p>歡迎來到我的個人網站，我目前就讀於台灣科技大學企管系，在獲得許多書卷獎的同時也參與活動的籌備以及參加競賽活動</p>
+    <div style="text-align: center;">
+      <img src="attached_assets/20231010_170403.jpg" alt="Personal Photo" class="img-fluid rounded-circle">
+    </div>
+  </section>
+
+  <section id="experience">
+    <h2>競賽經歷</h2>
+    <ul>
+      <li>第三屆永豐金控校園商業競賽</li>
+      <li>2024「時間預測分析與探討」國道智慧交通管理創意競賽優等</li>
+      <li>高中小論文競賽特優 - 政府發行振興券的影響與民眾滿意度調查</li>
+      <li>商管群中心-商概優勝獎</li>
+    </ul>
+  </section>
+
+  <section id="activities">
+    <h2>活動經歷</h2>
+    <ul>
+      <li>籌備112四系聯合宿營</li>
+      <li>籌備113寒假點心營</li>
+    </ul>
+  </section>
+
 <section id="portfolio" class="py-5">
   <div class="container">
     <h2 class="text-center mb-4">我的作品</h2>
