--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <img src="attached_assets/20231010_170403.jpg" alt="個人照片" class="img-fluid rounded-circle">
           </div>
           <div class="col-md-8">
-            <p>歡迎來到我的個人網站，我目前就讀於台灣科技大學企管系，在獲得許多書卷獎的同時也參與活動的籌備以及參加競賽活動。</p>
+            <p>歡迎來到ji32k，我目前就讀於台灣科技大學企管系，在獲得許多書卷獎的同時也參與活動的籌備以及參加競賽活動。</p>
           </div>
         </div>
       </div>
